--- a/src/antlr/CMakeLists.txt
+++ b/src/antlr/CMakeLists.txt
@@ -2,9 +2,5 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} ANTLRSOURCES)
 list(REMOVE_ITEM ANTLRSOURCES ${CMAKE_CURRENT_SOURCE_DIR}/dll.cpp)
 include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src/antlr)
 
-if(PYTHON_MODULE)
-	add_library(antlr SHARED ${ANTLRSOURCES})
-	install(TARGETS antlr DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
-else(PYTHON_MODULE)
-	add_library(antlr STATIC ${ANTLRSOURCES})
-endif(PYTHON_MODULE)
+add_library(gdl_antlr STATIC ${ANTLRSOURCES})
+set_target_properties(gdl_antlr PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
